package br.edu.ifg.trilhadeaprendizadoapims.user.dto;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class AdminCreateDto extends UsuarioCreateDto{
}
