package br.edu.ifg.trilhadeaprendizadoapims.user.dto;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class AdministradorDto extends UsuarioDto{
}
